# orbit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  main.cpp
src/: main.cpp
src/core/: ArbitrageEngine.cpp  ArbitrageEngine.h  PriceTable.cpp  PriceTable.h
src/exchanges/: BinanceWS.cpp  BinanceWS.h  CoinbaseWS.cpp  CoinbaseWS.h  Exchange.h  HyperLiquidWS.cpp  HyperLiquidWS.h  KrakenWS.cpp  KrakenWS.h
src/utils/: Config.h  Logger.h  Metrics.h  ThreadPool.h
